# world-ctf

./: .gitignore  Cargo.toml  README.md  config.toml
contracts/: GasConsumer.sol
src/: bindings.rs  lib.rs  main.rs  transaction.rs  world_id.rs
