[package]
name = "gas-test"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-network = "0.8.0"
alloy-provider = { version = "0.8.0", features = ["ws"] }
alloy-signer-local = "0.8.0"
alloy-primitives = "0.8.0"
alloy-sol-types = "0.8.0"
clap = { version = "4.4", features = ["derive"] }
eyre = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.0"
alloy-consensus = "0.8.0"
alloy-transport = "0.8.0"
alloy-rpc-types-eth = "0.8.0"
world-chain-builder-pbh = { git = "https://github.com/worldcoin/world-chain", rev = "7a359d2" }
world-chain-builder-test-utils = { git = "https://github.com/worldcoin/world-chain", rev = "7a359d2" }
semaphore-rs = "0.3.1"
base64 = "0.22.1"
chrono = "0.4"
hex = "0.4.3"
tiny-keccak = { version = "2.0", features = ["keccak"] }
